deploy/k8s/a11y-drupal-app-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: a11y-drupal-app
spec:
  selector:
    matchLabels:
      app: a11y-drupal-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: a11y-drupal-app
    spec:
      containers:
        - name: app
          image: schala/accessibility-drupal:latest
          readinessProbe:
            httpGet:
              path: /user/login
              port: 8080
              httpHeaders:
                - name: Host
                  value: localhost
            failureThreshold: 2
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /user/login
              port: 8080
              httpHeaders:
                - name: Host
                  value: localhost
            failureThreshold: 2
            periodSeconds: 15
          startupProbe:
            httpGet:
              path: /user/login
              port: 8080
              httpHeaders:
                - name: Host
                  value: localhost
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 100m
              memory: 100M
            limits:
              cpu: 2000m
              memory: 4000M
          volumeMounts:
            - name: a11y-drupal-files
              mountPath: /var/www/html/web/sites/default/files
      volumes:
        - name: a11y-drupal-files
          persistentVolumeClaim:
            claimName: a11y-drupal-app-files-pvc
        - name: a11y-drupal-secret
          secret:
            secretName: a11y-drupal-secret
