deploy/k8s/a11y-drupal-app-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: a11y-drupal-app-svc
  namespace: default
spec:
  ports:
    - name: nginx
      port: 8080
  selector:
    app: a11y-drupal-app
