deploy/k8s/a11y-drupal-mariadb-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: a11y-drupal-mariadb
spec:
  ports:
    - port: 3306
  selector:
    app: a11y-drupal-mariadb
  clusterIP: None
